# CUDA_Raytracer

./: .gitignore  CUDA_Raytracer.vcxproj  README.md  image.ppm
CUDA_Raytracing/: CMakeLists.txt
CUDA_Raytracing/source/private/: main.cu
CUDA_Raytracing/source/public/: camera.h  ray.h  vec3.h
source/: PERFORMANCE.txt  commands.txt
source/private/: camera.cu  main.cu  scenes.cu
source/private/bvh/: bvh.cu
source/private/scenes/: basicSphereScenes.cu  checkeredSphereScene.cu  cornellBoxScene.cu  cornellSmokeScene.cu  perlinSphereScene.cu  quadsScene.cu  randomSpheresScene.cu  simpleLightScene.cu
source/private/shapes/: quad.cu  sphere.cu  triangle.cu
source/private/textures/: imageTexture.cu  noiseTexture.cu  perlin.cu  textureLoader.cu
source/public/: camera.h  exceptionChecker.h  mathOperations.h  ray.h  scene.h  scenes.h  util.h
source/public/bvh/: aabb.h  bvh.h
source/public/lights/: diffuseLight.h  isotropic.h
source/public/materials/: dielectric.h  lambertian.h  material.h  metal.h
source/public/sceneObjects/: sceneObject.h
source/public/scenes/: basicSphereScenes.h  checkeredSphereScene.h  cornellBoxScene.h  cornellSmokeScene.h  perlinSphereScene.h  quadsScene.h  randomSpheresScene.h  simpleLightScene.h
source/public/shapes/: constantMedium.h  quad.h  shape.h  sphere.h  triangle.h
source/public/structs/: ShapeTransform.h  color4.h  hitInformation.h  interval.h  transform.h  vec2.h  vec3.h
source/public/textures/: checkerTexture.h  imageTexture.h  noiseTexture.h  perlin.h  solidColor.h  texture.h  textureLoader.h
(+1 files in other folders)
